теги nav div footer

--- a/index1.html
+++ b/index1.html
@@ -1,9 +1,23 @@
 <html>
 <head>
     <script>
-        
+
     </script>
 </head>
 <body>
+    <header>
+        <nav>
+            содержимое тега nav
+        </nav>
+    </header>
+    <div>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus labore vel quasi. Sit adipisci itaque inventore consectetur nesciunt aperiam totam tempore quisquam eos? Fuga similique reprehenderit id cum repudiandae delectus.
+    </div>
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, provident?
+    </div>
+    <footer>
+        содержимое подвала
+    </footer>
 </body>
 </html>
